# SyncKar-AI4BHARAT

./: .gitignore  README.md  synckar_architecture.html
.kiro/specs/aws-deployment/: .config.kiro  design.md  requirements.md  (+1 more)
synckar/: .coverage  .env.example  DEPLOY.md  Dockerfile  README.md  architecture-demo.html  docker-compose.yml  pyproject.toml  railway.toml  render.yaml
synckar/dashboard/: eslint.config.js  index.html  vercel.json  vite.config.js
synckar/dashboard/src/: App.jsx  index.css  main.jsx
synckar/dashboard/src/portals/: AuthGuard.jsx  MockLogin.jsx  PortalFactories.jsx  PortalLauncher.jsx  PortalSWS.jsx  PortalShop.jsx  portal.css
synckar/migrations/: init.sql
synckar/mock_systems/: Dockerfile  combined_app.py  railway.toml
synckar/mock_systems/mock_dept_factories/: app.py
synckar/mock_systems/mock_dept_shop/: app.py
synckar/mock_systems/mock_sws/: app.py
synckar/scripts/: demo_scenario_a.py  demo_scenario_b.py  demo_scenario_c.py  reset_state.py
synckar/synckar/: config.py  db.py  kafka_client.py
synckar/synckar/adapters/departments/factories/: poller.py  translator.py
synckar/synckar/adapters/departments/shop_establishment/: poller.py  translator.py
synckar/synckar/adapters/sws/: poller.py  translator.py
synckar/synckar/api/: main.py  middleware.py
synckar/synckar/api/routes/: audit.py  dlq.py  health.py  mock_proxy.py  webhooks.py
synckar/synckar/audit/: ledger.py  signing.py
synckar/synckar/pipeline/: conflict.py  dispatcher.py  loop_guard.py  outbox.py  watermark.py
synckar/synckar/workers/: celery_app.py  reconciliation.py
synckar/tests/unit/: test_adapters.py  test_dispatcher.py  test_idempotency.py  test_loop_guard.py  test_outbox.py  test_watermark.py
(+4 files in other folders)
