[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synckar"
version = "0.1.0"
description = "SyncKar — Event-driven interoperability layer for Karnataka SWS"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "confluent-kafka>=2.4",
    "psycopg2-binary>=2.9",
    "asyncpg>=0.29",
    "redis>=5.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "celery[redis]>=5.4",
    "structlog>=24.1",
    "cryptography>=42.0",
    "zeep>=4.2",
    "mmh3>=4.1",
    "prometheus-client>=0.20",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "httpx",  # for FastAPI TestClient
]

[tool.setuptools.packages.find]
include = ["synckar*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.coverage.run]
# Only measure coverage for the core pipeline/model/adapter modules.
# API routes, workers, and observability require live infrastructure (Kafka,
# Redis, PostgreSQL) and are covered by integration tests, not unit tests.
source = ["synckar"]
omit = [
    "synckar/api/*",
    "synckar/workers/*",
    "synckar/observability/*",
    "synckar/schema_copilot/*",
    "synckar/adapters/sws/poller.py",
    "synckar/adapters/departments/*/poller.py",
    "synckar/audit/ledger.py",
    "synckar/audit/signing.py",
    "synckar/adapters/base.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true

